# opus-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: usage.md
src/: cli.rs  db.rs  main.rs  tests.rs  types.rs  util.rs
