[package]
name = "opus"
version = "0.2.0-alpha"
authors = ["xnacly <47723417+xNaCly@users.noreply.github.com>"]
description = "Manage tasks with ease"
edition = "2021"

[dependencies]
chrono = "0.4.22"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
clap = { version = "4.0.15", features = ["derive", "cargo"] }
